updated index.html by adding in all the major div's on the page and giving them relevent ids

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
 
     <!-- main -->
     <main id="main-container" class="container">
-      <div class="row"></div>
+      <div class="row">
+        <aside id="search-city-container"></aside>
+        <div id="searched-city-forecast">
+          <div id="searched-city-current-weather"></div>
+
+          <div id="forecast-header"></div>
+
+          <div id="forecast-cards-container"></div>
+        </div>
+      </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
