updated index.html getting the column on the left side of the page where the ability to search a city will go to display and hadded a header for its section --> 'Search for a city'

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
     <!-- main -->
     <main id="main-container" class="container">
       <div class="row">
-        <aside id="search-city-container"></aside>
-        <div id="searched-city-forecast">
-          <div id="searched-city-current-weather"></div>
+        <!-- left side of page -->
+        <aside class="col-3" id="search-city-container">
+          <h1>Search for a city</h1>
+        </aside>
 
+        <!-- right side of page -->
+        <div id="searched-city-forecast" class="col-9">
           <div id="forecast-header"></div>
 
           <div id="forecast-cards-container"></div>
