updated index.html getting the current weather section displaying in the most basic format to the page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
         <!-- right side of page -->
         <div id="searched-city-forecast" class="col-9">
           <div id="forecast-header"></div>
-
+          <div id="searched-city-current-weather">
+            <div
+              id="outline-current-weather"
+              class="col-15 border border-dark m-3 rounded"
+            >
+              <h1>Todays Weather</h1>
+            </div>
+          </div>
           <div id="forecast-cards-container"></div>
         </div>
       </div>
