--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <h1>Search for a city</h1>
           <div class="input-group mb-3">
             <input
+              id="input"
               type="text"
               class="form-control"
               placeholder="Enter City Name..."
