--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
               class="col-15 border border-dark m-3 rounded"
             >
               <h1>Todays Weather</h1>
+              
+              <h3 id="cityAndDate" class="city-name align-middle"></h3>
+              <img id="current-pic" alt="">
+              <p id="temperature"></p>
+              <p id="humidity"></p>
+              <p id="wind-speed"></p>
+              <p id="UV-index"></p>
+
             </div>
           </div>
 
@@ -80,6 +88,7 @@
       </div>
     </main>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
