--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h1>Todays Weather</h1>
               
               <h3 id="cityAndDate" class="city-name align-middle"></h3>
-              <img id="current-pic" alt="">
+              <img id="weatherIconImg" alt="">
               <p id="temperature"></p>
               <p id="humidity"></p>
               <p id="wind-speed"></p>
