--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
             <h1>5-Day Forecast</h1>
           </div>
 
-          <div id="forecast-cards-container">
-            <!-- dynamically add cards -->
+          <div class="row" id="forecast-cards-container">
+            <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+            <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+            <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+            <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+            <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>          
           </div>
         </div>
       </div>
